# starterkit-lessons

./: .buildinfo  .gitignore  .travis.yml  00-prerequisites.md  01-building-decays.md  01-davinci.md  01-ganga-with-cmake.md  01-lhcb-dev.md  01-managing-files-with-ganga.md  01-outline.html  01-outline.md  01-screen.html  01-screen.md  02-bookkeeping.html  02-bookkeeping.md  02-lb-git.md  02-screen.html  02-screen.md  03-bookkeeping.html  03-bookkeeping.md  04-files-from-grid.md  05-files-from-grid.html  05-files-from-grid.md  05-interactive-dst.html  05-interactive-dst.md  06-building-decays.md  06-loki-functors.md  07-dataflow.md  07-rerun-stripping.md  08-minimal-dv-job.md  08-stripping.md  09-eos-storage.md  09-minimal-dv-job.html  09-minimal-dv-job.md  10-davinci-grid.md  10-eos-storage.md  11-davinci-grid.md  11-eos-storage.md  11-split-jobs.md  12-add-tupletools.md  (+70 more)
_episodes/: 01a-cernvm.md  01b-docker.md  01c-sl6.md  01d-setupsimple.md  01e-setupcomplete.md  01f-building.md  01g-testing.md  02a-gaudi-helloworld.md  02a-gaudi-intro.md  02a-setupsimple.md  02b-gaudi-intro.md  02b-setupcomplete.md  02c-conditions.md  02c-detectordesc.md  03a-gaudi.md  03b-upgrading.md  (+11 more)
code/GaudiTemplate/: CMakeLists.txt
code/GaudiTemplate/GaudiPackageTemplate/: CMakeLists.txt
code/GaudiTemplate/GaudiPackageTemplate/options/: gaudi_opts.py
code/GaudiTemplate/GaudiPackageTemplate/src/: GaudiTemplateAlgorithm.h
code/GaudiTemplate/GaudiPackageTemplate/xml/: GODObject.xml  ThreeVecEx.xml
code/gaudi/hello_world/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  gaudi_opts.py
(+576 files in other folders)
